syntax = "proto3";

package authorization;

import "google/protobuf/timestamp.proto";

service PermissionService {
  rpc CreatePermission(CreatePermissionRequest) returns (CreatePermissionResponse);
  rpc GetPermissionByName(GetPermissionByNameRequest) returns (GetPermissionResponse);
  rpc ListPermissions(ListPermissionsRequest) returns (ListPermissionsResponse);
  rpc UpdatePermission(UpdatePermissionRequest) returns (UpdatePermissionResponse);
  rpc DeletePermission(DeletePermissionRequest) returns (DeletePermissionResponse);
}

message Permission {
  string id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

// Create Permission
message CreatePermissionRequest {
  string name = 1;
  string description = 2;
}

message CreatePermissionResponse {
  string permission_id = 1;
  bool success = 2;
}

// Get Permission
message GetPermissionByNameRequest {
  string permission_name = 1;
}

message GetPermissionResponse {
  Permission permission = 1;
  bool success = 2;
}

// List Permissions
message ListPermissionsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListPermissionsResponse {
  repeated Permission permissions = 1;
  int32 count = 2;
  bool success = 3;
}

// Update Permission
message UpdatePermissionRequest {
  string permission_id = 1;
  string name = 2;
}

message UpdatePermissionResponse {
  bool success = 1;
  string message = 2;
}

// Delete Permission
message DeletePermissionRequest {
  string permission_id = 1;
}

message DeletePermissionResponse {
  bool success = 1;
  string message = 2;
}